Project

General

Profile

Actions

Bug #55460

closed

GetBucketTagging returns wrong NoSuchTagSetError instead of NoSuchTagSet

Added by Casey Bodley about 2 years ago. Updated 6 months ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

100%

Source:
Tags:
tagging backport_processed
Backport:
octopus pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #55612: octopus: GetBucketTagging returns wrong NoSuchTagSetError instead of NoSuchTagSetRejectedActions
Copied to rgw - Backport #55613: pacific: GetBucketTagging returns wrong NoSuchTagSetError instead of NoSuchTagSetResolvedKonstantin ShalyginActions
Copied to rgw - Backport #55614: quincy: GetBucketTagging returns wrong NoSuchTagSetError instead of NoSuchTagSetResolvedActions
Actions #1

Updated by Casey Bodley about 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 36856
Actions #2

Updated by Casey Bodley about 2 years ago

  • Pull request ID changed from 36856 to 46167
Actions #3

Updated by Daniel Gryniewicz about 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55612: octopus: GetBucketTagging returns wrong NoSuchTagSetError instead of NoSuchTagSet added
Actions #5

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55613: pacific: GetBucketTagging returns wrong NoSuchTagSetError instead of NoSuchTagSet added
Actions #6

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55614: quincy: GetBucketTagging returns wrong NoSuchTagSetError instead of NoSuchTagSet added
Actions #7

Updated by Backport Bot almost 2 years ago

  • Tags changed from tagging to tagging backport_processed
Actions #8

Updated by Konstantin Shalygin 10 months ago

  • Assignee set to Daniel Gryniewicz
Actions #9

Updated by Konstantin Shalygin 6 months ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF