RGW - Fix NoSuchTagSet error

A bug in AWS documentation caused this to be named "NoSuchTagSetError",
when the proper name (now fixed in the docs) is "NoSuchTagSet".  Fix
this so we match AWS.

Fixes: https://tracker.ceph.com/issues/55460
Author: Peter Gerber <peter@arbitrary.ch>
Signed-off-by: Daniel Gryniewicz <dang@redhat.com>
(cherry picked from commit a0ae10eb44217a2a1b084503e2fc131ab9bc2264)

Conflicts:
  - path: src/rgw/rgw_common.cc
    comment: manually resolved minor conflict